--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
-$FontFamily: 'Ambit', Arial, Helvetica, sans-serif;
-$BaseFont:  15px;
+$FontFamily: 'Calibri', Arial, Helvetica, sans-serif;
+$BaseFont:  14px;
 $BodyBgColor: #e9edf4;
 $BgWhite: #ffffff;
 $BgGray: #f7f7f7;
