--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,9 @@
     <div class="container">
       <div class="row row-zero">
         <div class="col-lg-7 col-md-12 col-sm-12">
-          <div class="graybg">
+          <div>
             <div class="cust-card">
+              <h1>Dashboard</h1>
               <h2>My Action Items</h2>
 
               <app-pie-chart></app-pie-chart>
