--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -7,7 +7,7 @@
     ul { display: $DisplayInlineBlock; padding: 0; margin: 0; list-style: none; width: $Width100;
       li { display: $DisplayBlock;
         a { display: $DisplayBlock; padding:13px 16px 13px 54px; color: $TextWhite;font-family:$FontFamily;
-          i {position: absolute; left:12px;top:5px;}
+          i {position: absolute; left: 14px; top: 7px;}
           &:hover { /*background: $TextWhite;*/ color:#181f2c; text-decoration: none;}
           &.active { /*background: $TextWhite;*/ color:#181f2c; text-decoration: none;}
           &.active:after { width: $Width100;}
@@ -28,7 +28,7 @@
       // a, .card-header {display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center;}
       }
       li.all-doc > a {line-height:normal;
-        i {top:10px}
+        i {top:6px}
       }
     }
   }
@@ -42,7 +42,7 @@
 .sidenav > ul > li > a.active:after { width: $Width100;}
 
 .sidenav > ul > li > a:hover .fc-home:before, .sidenav > ul > li > a.active .fc-home:before { background-image: url(/assets/images/common/icons/fc-home-d.png); }
-.sidenav > ul > li > a:hover .fc-user-plus:before, .sidenav > ul > li > a.active .fc-user-plus:before { background-image: url(/assets/images/common/icons/fc-user-plus-d.png); }
+.sidenav > ul > li > a:hover .fc-user-plus:before, .sidenav > ul > li > a.active .fc-user-plus:before { background-image: url(/assets/images/common/icons/fc-user-plus-d.png); margin-left: 3px;}
 .sidenav > ul > li > a:hover .fc-list-thumb:before, .sidenav > ul > li > a.active .fc-list-thumb:before { background-image: url(/assets/images/common/icons/fc-list-thumb-d.png); }
 .sidenav > ul > li > a:hover .fc-map-marker:before, .sidenav > ul > li > a.active .fc-map-marker:before { background-image: url(/assets/images/common/icons/fc-map-marker-d.png); }
 .sidenav > ul > li > a:hover .fc-info:before, .sidenav > ul > li > a.active .fc-info:before { background-image: url(/assets/images/common/icons/fc-info-d.png); }
