--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,18 +190,19 @@ textarea.form-control {
   background: #e9ecef;
   color: #000;
 }
-
+.document.wrapper {overflow: inherit;}
 .cal-wrap {
   position: relative;
-  .mat-button-wrapper {
-    box-shadow: none;
-    border: 0;
-    background: url("src/assets/images/common/icons/fc-cal.png");
+  .cal-btn {
+    box-shadow: none !important;
+    background: url("src/assets/images/common/icons/fc-cal.png") no-repeat;
     width: 35px;
     height: 24px;
+    padding: 0;
+    border: 0;
     position: absolute;
-    right: 5px;
-    top: 2px;
+    right: 3px;
+    top: 3px;
     display: inline-block;
     svg {
       display: none;
@@ -348,7 +349,7 @@ textarea.form-control {
 .sidenav > ul > li > a,
 .top-nav ul.navigation > li > a {
   border: none;
-  font-size: 18px;
+  font-size: 14px;
   color: inherit;
   background: none;
   cursor: pointer;
@@ -432,8 +433,8 @@ textarea.form-control {
 .fc:before,
 [class^="fc-"]:before {
   content: "";
-  min-width: 36px;
-  min-height: 36px;
+  min-width: 30px;
+  min-height: 30px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
@@ -466,12 +467,14 @@ textarea.form-control {
 }
 .fc-map-marker:before {
   background-image: url(/assets/images/common/icons/fc-map-marker.png);
+  background-size: 45%;
 }
 .fc-map-marker.dark:before {
   background-image: url(/assets/images/common/icons/fc-map-marker-d.png);
 }
 .fc-info:before {
   background-image: url(/assets/images/common/icons/fc-info.png);
+  background-size: 22%;
 }
 .fc-info.dark:before {
   background-image: url(/assets/images/common/icons/fc-info-d.png);
@@ -502,11 +505,13 @@ textarea.form-control {
 }
 .fc-all-documents:before {
   background-image: url(/assets/images/common/icons/fc-all-documents.png);
+  background-size: 70%;
 }
 /* Custom Icons */
 
 .wrapper.dashboard {
   margin: 44px 0 0 220px;
+  background: #fff;
 }
 .wrapper {
   display: $DisplayInlineBlock;
@@ -516,13 +521,18 @@ textarea.form-control {
   width: calc(100% - 220px);
 }
 .sidenavClosed .wrapper.dashboard {
-  margin: 44px 0px 0 0px;
+  margin: 44px 0px 0 50px;
 }
 .sidenavClosed .wrapper {
   margin: 65px 0px 0 0px;
   transition: $AllTransition;
-  width: calc(100% - 0%);
+  width: calc(100% - 50px);
 }
+
+.sidenavClosed  .ng-sidebar{width: 50px !important; transform: translateX(0%)!important; }
+.sidenavClosed .sidenav ul > li > a {display: block; height: 47px;}
+.sidenavClosed .sidenav ul > li > a > span {display: none;}
+
 .main-container p {
   text-align: justify;
 }
@@ -556,7 +566,7 @@ textarea.form-control {
       line-height: normal;
     }
     li.all-doc > a > i {
-      top: 5px !important;
+      top: 8px !important;
     }
     li.abt {
       display: $DisplayNone !important;
@@ -992,10 +1002,15 @@ textarea.form-control {
 }
 
 
-
-
-
-
+.ngb-tp-input-container {width: 3rem !important;}
+.ngb-tp-meridian button {padding: 0.175rem 0.375rem!important;color: #495057!important; border-color: #495057!important;}
+.ngb-tp-meridian button:focus, .ngb-tp-meridia button:active, .ngb-tp-meridian button:hover  {box-shadow: none !important; color: #fff !important; background-color: #007bff!important;}
+.ngb-tp-hour button, .ngb-tp-minute button {padding:0rem 1rem !important;}
+.ngb-tp-spacer {width: 0.5rem!important;}
+.ngb-tp-chevron {color: #495057!important;}
+.ngb-tp-chevron::before {width: 0.59em!important;border-width: 0.19em 0.19em 0 0!important;height: 0.59em!important;}
+.modal-body.remarks textarea { width: 100%; height: 100px; resize: none;}
+.remarks-edit {width: 100%; text-align: center;display: block;}
 
 .custom-datatable {
   .dataTables_wrapper {
