--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,13 @@
 <div class="wrapper dashboard">
   <section>
     <div class="container">
+      
       <div class="row row-zero">
-        <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="col-sm-12 cust-pad-mar"><h1>Dashboard</h1></div>
+        <div class="col-lg-7 col-md-12 col-sm-12">
           <div>
-            <div class="cust-card">
-              <h1>Dashboard</h1>
+            <div class="cust-card cust-pad-mar">
+              
               <h2>My Action Items</h2>
 
               <app-pie-chart></app-pie-chart>
@@ -14,7 +16,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="nicescroll-box">
               <div class="wrap">
                 <app-minutes-of-meetings></app-minutes-of-meetings>
