--- a/src/styles.scss
+++ b/src/styles.scss
@@ -511,7 +511,7 @@ textarea.form-control {
 
 .wrapper.dashboard {
   margin: 44px 0 0 220px;
-  background: #fff;
+  /*background: #fff;*/
 }
 .wrapper {
   display: $DisplayInlineBlock;
@@ -1039,6 +1039,16 @@ textarea.form-control {
 //   width: 545px;
 //   height: 200px;}
 .notification-sec {height:30vh; vertical-align: middle;display: table-cell;}
+.ngb-tp-input {padding:0;}
+.border-right {border-right: 1px solid #ddd;}
+.tab-pane .table-responsive {overflow: visible;}
+.modal-dialog { max-width: 700px;}
+.remarks-tbl .table th:nth-child(1) {width:20%;}
+.remarks-tbl .table th:nth-child(2) {width:25%;}
+.remarks-tbl .table th:nth-child(3) {width:55%;}
+.lbl-time {margin-top: 0px;}
+.cust-pad-mar {margin-top: 0.6rem;margin-left: 0.6rem;}
+.cust-pad-mar h1 {margin-bottom: 0;}
 
 @media (max-width: 991.98px) {
   .nav-tabs {
@@ -1061,6 +1071,13 @@ textarea.form-control {
   }
   .txt-center {
     text-align: left;
+  }
+  .lbl-time.text-right {text-align: left !important;}
+  .tab-pane .table-responsive {
+    overflow: scroll;
+  }
+  .tab-pane .table-responsive .table {
+   width:700px;
   }
 }
 
@@ -1130,6 +1147,11 @@ textarea.form-control {
   .btn {
     padding: 0.375rem 0.6rem;
   }
+  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter {
+    float: none;
+    text-align: left;
+  }
+  .cust-pad-mar h1 {margin-left:10px;}
 }
 
 /*Document Mom*/
